# Planning-on-VKC

./: .gitignore  .gitmodules  README.md  run_benchmark.sh
.catkin_tools/: .gitignore
.catkin_tools/profiles/default/: config.yaml
backup/tesseract_old/cmake_common_scripts/: LICENSE  README.rst
backup/tesseract_old/tesseract_ext/libccd/: CMakeLists.txt
backup/trajopt_ros/trajopt_sco/: CMakeLists.txt
benchmarking/: open_door_pull_bl1.csv  open_door_push_vkc.csv  open_drawer_pull_bl2.csv  open_drawer_pull_vkc.csv  proc_data.m
benchmarking/0622/: open_door_pull_bl1.csv  open_door_pull_bl2.csv  open_door_push_vkc.csv  open_drawer_pull_bl1.csv  open_drawer_pull_bl2.csv  open_drawer_pull_vkc.csv
benchmarking/0623/: open_door_pull_bl2.csv  open_drawer_pull_bl1.csv
src/astar/: CMakeLists.txt  main.cpp  package.xml
src/astar/cmake/: astar-config.cmake.in
src/astar/include/: AStar.hpp
src/astar/source/: AStar.cpp
src/moveit_config/env/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/gripper/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/household_env/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/pog_env/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/ridgeback_ur_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/sr_env/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/tieta_env/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/uam_env/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/vkc_demo/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_description/aerialvkc_v3000_description/: CMakeLists.txt  package.xml
src/robot_description/dingo_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/robot_description/dingo_description/launch/: description.launch
src/robot_description/dingo_description/urdf/: accessories.urdf.xacro  dingo-d.urdf.xacro  dingo-o.gazebo  dingo-o.urdf.xacro  dingo.urdf.xacro
src/robot_description/dingo_description/urdf/accessories/: hokuyo_ust10.urdf.xacro  sick_lms1xx_mount.urdf.xacro
src/robot_description/mobile_kinova_description/: CMakeLists.txt  package.xml
src/robot_description/mobile_kinova_description/arms/gen3/7dof/urdf/: gen3_macro.xacro
src/robot_description/mobile_kinova_description/grippers/robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro
src/robot_description/mobile_kinova_description/launch/: display.launch  gazebo.launch
src/robot_description/mobile_kinova_description/meshes/: b_l_wheel_link.STL  b_r_wheel_link.STL  base_link.STL  f_l_wheel_link.STL  f_r_wheel_link.STL  hokuyo.dae
src/robot_description/mobile_kinova_description/urdf/: common_properties.xacro  kortex_robot.xacro  main.xacro  mobile_kinova.xacro  mobile_manipulator_description.gazebo.xacro  mobile_manipulator_description.urdf.xacro
src/robot_description/pan_tilt_description/: CMakeLists.txt  package.xml
src/robot_description/pan_tilt_description/launch/: view_model.launch
src/robot_description/pan_tilt_description/rviz/: view_model.rviz
src/robot_description/pan_tilt_description/urdf/: kinect_dk.xacro  pan_tilt.urdf.xacro  pan_tilt_st.urdf.xacro
src/robot_description/ridgeback_dual_arm_description/: CMakeLists.txt  package.xml
src/robot_description/ridgeback_dual_arm_description/launch/: view_model.launch
src/robot_description/ridgeback_dual_arm_description/mesh/: ridgeback-2xur5e-all-simp-urdf.stl  ridgeback_2xur5-sup-simp-urdf.stl
src/robot_description/ridgeback_dual_arm_description/rviz/: view_model.rviz
src/robot_description/ridgeback_dual_arm_description/urdf/: kinect_dk.xacro  ridgeback_dual_arm.urdf.xacro
src/robot_description/robotiq_3f_gripper_visualization/: CMakeLists.txt
src/rviz_lighting/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/rviz_lighting/config/: rviz_lighting.rviz
src/rviz_lighting/launch/: rviz_lighting.launch
src/rviz_lighting/src/: AmbientLightDisplay.cpp  AmbientLightDisplay.h  LightDisplay.cpp  LightDisplay.h  LightVisual.cpp  LightVisual.h
src/rviz_lighting/urdf/: rviz_lighting.urdf
src/scene_builder/: CMakeLists.txt  package.xml
src/scene_builder/input/: .gitignore
src/scene_builder/launch/: view_object.launch  view_scene.launch
src/scene_builder/rviz/: bigai_tamp_scene.rviz  view_scene.rviz
src/scene_builder/scripts/: global_settings.py  (+6 more)
src/tesseract/cmake_common_scripts/: CMakeLists.txt  package.xml
src/tesseract/cmake_common_scripts/cmake/: cmake_tools.cmake
src/tesseract/tesseract_ext/bullet3/: CMakeLists.txt
src/tesseract/tesseract_ext/fcl/: CMakeLists.txt
src/vkc/: CMakeLists.txt  package.xml
src/vkc/cmake/: vkc-config.cmake.in
src/vkc/include/vkc/: construct_vkc.h  utils.h
src/vkc/include/vkc/action/: ActionCreatorFactory.h  TaskPlanParser.h  action_base.h  action_sequence.h  actions.h  goto_action.h  pick_action.h  place_action.h  use_action.h
src/vkc/include/vkc/env/: arena_env.h  benchmark_env.h  household_env.h  open_door_env.h  uam_env.h  urdf_scene_env.h  vkc_env_basic.h
src/vkc/include/vkc/interactive_object/: ball.h  cabinet.h  interface_object.h  stick.h
src/vkc/include/vkc/object/: basic_ball.h  basic_cabinet.h  basic_chair.h  basic_door.h  basic_drawer.h  basic_fridge.h  basic_hook.h  basic_marker.h  basic_object.h  basic_obs.h  basic_stick.h  basic_table.h  basic_wall.h  objects.h
src/vkc/include/vkc/planner/: huskey_ik_define.h  ik_traj.h  ikfast.h  long_horizon.h  prob_generator.h  prob_ompl_define.h  prob_translator.h  prob_translator_utils.h  traj_init.h  ur_kin.h
src/vkc/src/: construct_vkc.cpp  utils.cpp
src/vkc/src/action/: actions.cpp
src/vkc/src/env/: arena_env.cpp  benchmark_env.cpp  household_env.cpp  open_door_env.cpp  uam_env.cpp  urdf_scene_env.cpp  vkc_env_basic.cpp
src/vkc/src/planner/: ik_traj.cpp  long_horizon.cpp  prob_generator.cpp  prob_translator.cpp  prob_translator_utils.cpp  traj_init.cpp  ur_kin.cpp
src/vkc_example/: CMakeLists.txt  package.xml
(+413 files in other folders)
