<package format="2">
  <name>mobile_kinova_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mobile_kinova_description</p>
    <p>This package contains configuration data, 3D models and launch files
for mobile_kinova_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>